--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-color: rgb(113, 113, 140);
     font-family: 'Times New Roman', Times, serif;
     font-size: large;
@@ -8,12 +8,13 @@ body{
 h1{
     border-bottom: 15px;
     color: rgb(20, 9, 140);
+    text-align: center;
     font-size: 16px;
     text-transform: uppercase;
 }
 
 a:link {
-    color: rgb(228, 228, 10);
+    color: rgb(228, 10, 10);
   }
   
 a:hover {
